Fixed flex spacing on technologies

--- a/styles.css
+++ b/styles.css
@@ -212,16 +212,32 @@ p {
 }
 
 /* Stuff I've made */
+#stuff-i-made {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 10px;
+}
+
+#stuff-i-made h2 {
+  grid-column: 1 / -1; /* Make the h2 span all columns */
+  text-align: left; /* Optional: Center the text */
+}
+
+.project-card {
+  background-color: var(--dark);
+  border: 1px solid var(--darker);
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
 .built-with {
-  padding: 0 0 12px 0;
+  padding: 1rem 0;
+  gap: .5rem;
 }
 
 .built-with li {
-  font-size: .6rem;
-}
-
-.built-with li:not(:first-child){
-  padding-left: 8px;
+  font-size: .8rem;
 }
 
 section h2:before {
